# sentiric-mobile-sip-uac

./: .gitignore  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/ai/sentiric/sentiric_mobile_sip_uac/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  telecom_telemetry.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
test/: widget_test.dart
